--- a/JS DSA/Pokeman app/index.html
+++ b/JS DSA/Pokeman app/index.html
@@ -13,12 +13,12 @@
     />
   </head>
   <body class=" bg-purple-700">
-    <main class="main">
+    <main class="main h-lvh">
         <div class="logo container mx-auto size-56 ">
             <img src="assets/pokemon logo.png" alt="Pokemon Logo">
         </div>
-        <section class="flex justify-center content-center">
-          <div class="card bg-white max-w-sm rounded overflow-hidden shadow-lg">
+        <section class="flex justify-center content-center w-full mb-8">
+          <div class="card bg-white max-w-sm rounded overflow-hidden shadow-lg max-h-80 ">
             
             <form class="max-w-md mx-auto">   
               <label for="default-search" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>
@@ -36,11 +36,11 @@
               <img src="assets/pokemon logo.png" alt="default image">
             </div>
             <div class="stats">
-              <div id="name"></div>
-              <div id="forms"></div>
-              <div id="height"></div>
-              <div id="weight"></div>
-              <div id="name"></div>
+              <div id="name"      class="bg-sky-600" ></div>
+              <div id="forms"     class="bg-sky-600" ></div>
+              <div id="height"    class="bg-sky-600" ></div>
+              <div id="weight"    class="bg-sky-600" ></div>
+              <div id="abilities" class="bg-sky-600" ></div>
             </div>
           </div>
         </section>
